[gd_scene load_steps=6 format=3 uid="uid://bf66utwkggurs"]

[ext_resource type="Script" path="res://Scripts/CombatScene.gd" id="1_x1746"]
[ext_resource type="Theme" uid="uid://bnhu0ase4c34b" path="res://Themes/backgroundTextFunction.tres" id="2_2i2g8"]
[ext_resource type="Script" path="res://Scripts/generateMenu.gd" id="3_jtuvr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_myael"]
bg_color = Color(0.164706, 0.0901961, 0.231373, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wxqib"]
bg_color = Color(0.266667, 0.247059, 0.482353, 1)

[node name="CombatScene" type="Node2D"]
script = ExtResource("1_x1746")

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_myael")
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Input" type="MarginContainer" parent="CanvasLayer/Control/Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Functions" type="MarginContainer" parent="CanvasLayer/Control/Panel/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(800, 400)
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/Panel/MarginContainer/HBoxContainer/Functions"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="beforeDiffFunction" type="Label" parent="CanvasLayer/Control/Panel/MarginContainer/HBoxContainer/Functions/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 50
text = "f(x) ="

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/Panel/MarginContainer/HBoxContainer/Functions/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 100

[node name="expr1" type="Label" parent="CanvasLayer/Control/Panel/MarginContainer/HBoxContainer/Functions/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("2_2i2g8")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_wxqib")

[node name="+" type="Label" parent="CanvasLayer/Control/Panel/MarginContainer/HBoxContainer/Functions/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 0
theme_override_font_sizes/font_size = 100
text = "+
"

[node name="expr2" type="Label" parent="CanvasLayer/Control/Panel/MarginContainer/HBoxContainer/Functions/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme = ExtResource("2_2i2g8")
theme_override_font_sizes/font_size = 100

[node name="beforeDiffFunction2" type="Label" parent="CanvasLayer/Control/Panel/MarginContainer/HBoxContainer/Functions/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_font_sizes/font_size = 50
text = "f'(x) ="

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/Control/Panel/MarginContainer/HBoxContainer/Functions/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 100

[node name="expr1Answer" type="Label" parent="CanvasLayer/Control/Panel/MarginContainer/HBoxContainer/Functions/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("2_2i2g8")
theme_override_font_sizes/font_size = 100

[node name="+" type="Label" parent="CanvasLayer/Control/Panel/MarginContainer/HBoxContainer/Functions/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 1
theme_override_font_sizes/font_size = 100
text = "+
"

[node name="expr2Answer" type="Label" parent="CanvasLayer/Control/Panel/MarginContainer/HBoxContainer/Functions/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource("2_2i2g8")
theme_override_font_sizes/font_size = 100

[node name="Menu" type="MarginContainer" parent="CanvasLayer/Control/Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/Control/Panel/MarginContainer/HBoxContainer/Menu"]
layout_mode = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/Panel/MarginContainer/HBoxContainer/Menu/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="title" type="Label" parent="CanvasLayer/Control/Panel/MarginContainer/HBoxContainer/Menu/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Differential overview"

[node name="BoxContainer" type="BoxContainer" parent="CanvasLayer/Control/Panel/MarginContainer/HBoxContainer/Menu/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
theme_override_constants/separation = 10

[node name="f(x)" type="VBoxContainer" parent="CanvasLayer/Control/Panel/MarginContainer/HBoxContainer/Menu/ScrollContainer/VBoxContainer/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10
script = ExtResource("3_jtuvr")

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
